syntax = "proto3";
option optimize_for = LITE_RUNTIME;

message glyphData_proto
{
	float key = 1;
	float x = 2;
	float y = 3;
	float width = 4;
	float height = 5;
	
}

